# home_assignment_ai_engineer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_tests.py
diagram_generator/: __init__.py
diagram_generator/agents/: __init__.py  diagram_agent.py
diagram_generator/api/: __init__.py  app.py
diagram_generator/api/models/: __init__.py  requests.py  responses.py  schemas.py
diagram_generator/api/routes/: __init__.py  diagram.py
diagram_generator/core/: config.py  constants.py
diagram_generator/tools/: __init__.py  mcp_server.py  mcp_tools.py
diagram_generator/utils/: __init__.py  file_utils.py  gemini_client.py  helpers.py
docker/: main.py
tests/: __init__.py  conftest.py
tests/agents/: __init__.py  test_diagram_agent.py
tests/api/: __init__.py
tests/api/models/: __init__.py  test_models.py
tests/api/routes/: __init__.py  test_diagram.py
tests/core/: __init__.py  test_config.py  test_constants.py
tests/tools/: __init__.py  test_mcp_tools.py
tests/utils/: __init__.py  test_file_utils.py  test_gemini_client.py  test_helpers.py
